--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 1234
-DB_CONNECT = mongodb+srv://apoulah:apoulah12@cluster0.mtf7u.mongodb.net/sollersdb?retryWrites=true&w=majority
+DB_CONNECT = mongodb+srv://XXXX:XXXX-XXXXX@cluster0.mtf7u.mongodb.net/XXXXXX?retryWrites=true&w=majority
